--- a/css/style.css
+++ b/css/style.css
@@ -46,10 +46,15 @@ img {
  ************************************************/
 
 /* LAYOUT */
-.container {
-    width: 1140px;
-    margin: 0 auto;
-    padding: 0 20px;
+
+@media screen and (max-width: 480px) {
+
+    .container {
+        width: 100%;
+        margin: 0 auto;
+        padding: 0 20px;
+    }
+
 }
 
 .row {
