--- a/css/style.css
+++ b/css/style.css
@@ -46,15 +46,10 @@ img {
  ************************************************/
 
 /* LAYOUT */
-
-@media screen and (max-width: 480px) {
-
-    .container {
-        width: 100%;
-        margin: 0 auto;
-        padding: 0 20px;
-    }
-
+.container {
+    width: 1140px;
+    margin: 0 auto;
+    padding: 0 20px;
 }
 
 .row {
@@ -132,3 +127,46 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+
+@media screen and (min-width: 769px) and (max-width: 1140px) {
+
+    .container {
+        width: 100%;
+        margin: 0 auto;
+        padding: 0 20px;
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+
+    .container {
+        width: 100%;
+        padding: 0 15px;
+    }
+
+}
+
+@media screen and (max-width: 480px) {
+
+    .container {
+        width: 100%;
+        padding: 0 10px;
+    }
+
+    .row {
+        flex-direction: column;
+        align-items: center;
+        flex-grow: 1;
+        row-gap: 4rem;
+    }
+
+    .card {
+        padding: 0 20px;
+    }
+
+    .lessons .col, .steps .col, .why-us .col {
+        width: 100%;
+    }
+
+}
