--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ img {
     SOLUZIONE RESPONSIVE
  ************************************************/
 
-@media screen and (min-width: 769px) and (max-width: 1140px) {
+@media screen and (max-width: 1140px) {
     .container {
         width: 100%;
         margin: 0 auto;
@@ -154,10 +154,6 @@ img {
         align-items: center;
         flex-grow: 1;
         row-gap: 4rem;
-    }
-
-    .card {
-        padding: 0 20px;
     }
 
     .lessons .col, .steps .col, .why-us .col {
